--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lib"
   ],
   "dependencies": {
+    "autoprefixer": "^6.4.0",
     "contentful": "^3.5.0",
     "csso": "^2.2.1",
     "ecstatic": "^2.1.0",
@@ -20,6 +21,7 @@
     "node-sass": "^3.8.0",
     "open": "0.0.5",
     "path-exists": "^3.0.0",
+    "postcss": "^5.1.2",
     "uglify-js": "^2.7.3",
     "yargs": "^5.0.0"
   },
