--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "csso": "^2.2.1",
     "ecstatic": "^2.1.0",
     "fs-extra": "^0.30.0",
+    "less": "^2.7.1",
     "marked": "^0.3.6",
     "moment": "^2.14.1",
     "mustache": "^2.2.1",
