--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lib"
   ],
   "dependencies": {
+    "coffee-script": "^1.10.0",
     "contentful": "^3.5.0",
     "csso": "^2.2.1",
     "ecstatic": "^2.1.0",
