add stylus support

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "^5.1.2",
     "postcss-cssnext": "^2.8.0",
     "promisify-node": "^0.4.0",
+    "stylus": "^0.54.5",
     "uglify-js": "^2.7.3",
     "yargs": "^5.0.0"
   },
