--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "dependencies": {
     "coffee-script": "^1.10.0",
+    "concat-with-sourcemaps": "^1.0.4",
     "contentful": "^3.5.0",
     "csso": "^2.2.1",
     "ecstatic": "^2.1.0",
