wip - working on regenerating sourcemaps during minification step

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "coffee-script": "^1.10.0",
     "concat-with-sourcemaps": "^1.0.4",
     "contentful": "^3.5.0",
+    "cssnano": "^3.7.5",
     "csso": "^2.2.1",
     "ecstatic": "^2.1.0",
     "fs-extra": "^0.30.0",
