--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   ],
   "dependencies": {
     "app-module-path": "^2.1.0",
+    "babel-core": "^6.18.2",
+    "babel-preset-es2015": "^6.18.0",
     "coffee-script": "^1.10.0",
     "concat-with-sourcemaps": "^1.0.4",
     "contentful": "^3.5.0",
