--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "marked": "^0.3.6",
     "moment": "^2.14.1",
     "node-sass": "^3.8.0",
-    "open": "0.0.5",
+    "opn": "^4.0.2",
     "path-exists": "^3.0.0",
     "postcss": "^5.1.2",
     "postcss-cssnext": "^2.8.0",
@@ -32,7 +32,7 @@
     "require-dir": "^0.3.1",
     "stylus": "^0.54.5",
     "uglify-js": "^2.7.3",
-    "yargs": "^5.0.0"
+    "yargs": "^6.4.0"
   },
   "engines": {
     "node": ">= 4.0"
