--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "babel-core": "^6.18.2",
     "babel-preset-es2015": "^6.18.0",
+    "browser-sync": "^2.18.1",
+    "chokidar": "^1.6.1",
     "coffee-script": "^1.10.0",
     "concat-with-sourcemaps": "^1.0.4",
     "contentful": "^3.5.0",
