--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "path-exists": "^3.0.0",
     "postcss": "^5.1.2",
     "postcss-cssnext": "^2.8.0",
+    "progress": "^1.1.8",
     "promisify-node": "^0.4.0",
     "require-dir": "^0.3.1",
     "stylus": "^0.54.5",
