--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "csso": "^2.2.1",
     "ecstatic": "^2.1.0",
     "fs-extra": "^0.30.0",
-    "handlebars": "^4.0.6",
     "less": "^2.7.1",
     "marked": "^0.3.6",
     "moment": "^2.14.1",
+    "mustache": "^2.2.1",
     "node-sass": "^3.8.0",
     "opn": "^4.0.2",
     "path-exists": "^3.0.0",
