--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
     "yargs": "^6.4.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0"
+    "babel-cli": "^6.18.0",
+    "watch": "^1.0.1"
   },
   "engines": {
     "node": ">= 4.0"
   },
   "scripts": {
-    "build": "babel src -d dist --presets es2015"
+    "build": "babel src -d dist --presets es2015",
+    "watch": "watch 'npm run build' src"
   },
   "license": "MIT"
 }
