--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   ],
   "dependencies": {
     "babel-core": "^6.18.2",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2016": "^6.22.0",
+    "babel-preset-es2017": "^6.22.0",
     "bluebird": "^3.4.7",
     "browser-sync": "^2.18.1",
     "chokidar": "^1.6.1",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "ava": "^0.17.0",
     "babel-cli": "^6.18.0",
+    "babel-register": "^6.22.0",
     "dir-compare": "^1.3.0",
     "watch": "^1.0.1"
   },
@@ -41,7 +43,7 @@
     "node": ">= 4.0"
   },
   "scripts": {
-    "build": "babel src -d dist --presets es2015 --source-maps inline",
+    "build": "babel src -d dist --presets es2015,es2016,es2017 --source-maps inline",
     "watch": "watch 'npm run build' src",
     "test": "ava e2e/*/*.test.js --source dist/utils/util.js"
   },
