--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "dependencies": {
     "babel-core": "^6.18.2",
+    "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2016": "^6.22.0",
     "babel-preset-es2017": "^6.22.0",
     "bluebird": "^3.4.7",
