--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "node": ">= 4.0"
   },
   "scripts": {
-    "build": "babel src -d dist --presets es2015,es2016,es2017 --source-maps inline",
+    "build": "babel src -d dist --presets es2015,es2016,es2017 --source-maps inline --copy-files",
     "watch": "watch 'npm run build' src",
     "test": "ava e2e/*/*.test.js --source dist/utils/util.js"
   },
