--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "chokidar": "^1.6.1",
     "coffee-script": "^1.10.0",
     "concat-with-sourcemaps": "^1.0.4",
+    "connect-history-api-fallback": "^1.3.0",
+    "connect-logger": "^0.0.1",
     "cssnano": "^3.7.5",
     "decache": "^4.1.0",
     "fs-extra": "^1.0.0",
