--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "dependencies": {
     "babel-core": "^6.18.2",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-es2016": "^6.22.0",
     "babel-preset-es2017": "^6.22.0",
@@ -32,6 +33,8 @@
     "postcss": "^5.1.2",
     "postcss-cssnext": "^2.8.0",
     "require-dir": "^0.3.1",
+    "rollup": "^0.41.4",
+    "rollup-plugin-babel": "^2.7.1",
     "stylus": "^0.54.5",
     "uglify-js": "^2.7.3",
     "yargs": "^6.4.0"
