final example implementation for rollup

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "require-dir": "^0.3.1",
     "rollup": "^0.41.4",
     "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^7.0.0",
+    "rollup-plugin-commonjs": "^8.0.0",
+    "rollup-plugin-env": "^0.21.2",
     "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-replace": "^1.1.1",
     "stylus": "^0.54.5",
     "uglify-js": "^2.7.3",
     "yargs": "^6.4.0"
